@@ -213,12 +213,13 @@ module ActiveMerchant #:nodoc:
         three_d_secure_options = options[:three_d_secure]
         return unless three_d_secure_options
 
+        reference_id = options[:new_reference_id_field] ? three_d_secure_options[:ds_transaction_id] : three_d_secure_options[:three_ds_server_trans_id]
         auth_data = {
           cavv: three_d_secure_options[:cavv],
           xid: three_d_secure_options[:xid],
           eci: three_d_secure_options[:eci],
           version: three_d_secure_options[:version],
-          reference_id: three_d_secure_options[:three_ds_server_trans_id],
+          reference_id: reference_id,
           status: three_d_secure_options[:authentication_response_status] || three_d_secure_options[:directory_response_status]
         }.compact
 
